ci: add CLI updater script

--- a/.github/workflows/integration-tests-sentry-cli.yml
+++ b/.github/workflows/integration-tests-sentry-cli.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Start server and run integration tests
         run: |
           ./integration-test-server-start.sh &
-          dart lib/plugin.dart
+          dart run sentry_dart_plugin
